# Rustchenhao

./: Cargo.toml  product.db
migrations/2023-12-13-005430_products/: up.sql
src/: main.rs  routes.rs  schema.rs
