[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
diesel={version = "2.1.0", features = ["postgres", "r2d2"]}
serde="1.0"
serde_json = "1.0"
serde_derive="1.0"
anyhow = "1.0"
chrono="0.4.15"
dotenv="0.15"
